# microservice-caching

./: .virtualenv  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  Makefile  README.md  docker-compose.yaml
api-svc/: Dockerfile  pyproject.toml
api-svc/.pip-pin/: install.txt
api-svc/api_svc/: __init__.py  client.py  main.py  role.py  urls.py
bff-svc/: Dockerfile  pyproject.toml  setup.py
bff-svc/.pip-pin/: develop.txt
bff-svc/bff/: __init__.py  client.py  main.py  role.py  urls.py
common/: cache.py  context.py  crud.py  log_config.py  route.py  signal.py
config-svc/: Dockerfile  setup.py
config-svc/.pip-pin/: constraints.txt
config-svc/config/: __init__.py  context  main.py
node-svc/: Dockerfile  setup.py
node-svc/.pip-pin/: constraints.txt  develop.txt  install.txt  tests.txt
node-svc/node/: __init__.py  alembic.ini  cache.py  context.py  database.py  main.py  route.py
node-svc/node/alembic/: env.py
node-svc/node/alembic/versions/: 0488490ec66b_node_model.py  (+1 more)
postgres-initdb.d/: create-databases.sh
project-svc/: Dockerfile  pyproject.toml  setup.py
project-svc/.pip-pin/: install.txt
project-svc/project/: __init__.py  alembic.ini  crud.py  database.py  main.py
project-svc/project/alembic/: env.py  script.py.mako
tests/: test_cache.py
todo-svc/: Dockerfile  pyproject.toml  setup.cfg
todo-svc/.pip-pin/: constraints.txt
todo-svc/todo_svc/: __init__.py  alembic.ini  database.py  log_config.py  main.py
todo-svc/todo_svc/alembic/: env.py
todo-svc/todo_svc/alembic/versions/: 69494c419c3a_todo_model.py
(+1 files in other folders)
