[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="todo-svc"
description="ToDo Service"
version="1.0.0"
authors=[{"name"="Michał Lowas-Rzechonek", email="michal@rzechonek.net"}]
dependencies=[
    "alembic",
    "asyncpg",
    "fastapi",
    "fastapi-async-sqlalchemy~=0.3",
    "sqlalchemy~=1.4",
    "uvicorn",
    "watchfiles",
    "yarl",
]

[project.optional-dependencies]
develop = [
    "black",
    "flake8",
    "isort",
    "mypy",
]

[tool.black]
line-length = 110

[tool.flake8]
max-line-length=110

[tool.isort]
line_length = 110
include_trailing_comma = true
use_parentheses = true
known_first_party=["todo_svc"]
